--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -28,7 +28,11 @@
             class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg" value="1">
             Fruit
         </button>
-        
+
+            {{#if inventories}}
+            <h2 class="pacifico capitalize text-4xl text-dark-blue center">Shopping List</h2>
+
+            {{/if}}
 </div>
 
     {{!-- Main Content --}}
