added shopping list section to sidebar and draggable to cards

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -24,7 +24,10 @@
             add item
         </button>
 
-
+            {{#if inventories}}
+            <h2 class="pacifico capitalize text-4xl text-dark-blue">Shopping List <i class="fas fa-shopping-cart"></i></h2>
+            
+            {{/if}}
     </div>
 
     {{!-- Main Content --}}
