--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -1,4 +1,4 @@
-<div class="flex-1 text-center bg-white px-5 m-2 border rounded">
+<div class="flex-1 text-center bg-white px-5 m-2 border rounded draggable" draggable="true"">
     <div class="items-center">
         <div class="m-4">
             <h2 class="pacifico capitalize text-lg text-dark-blue ">{{item_name}}</h2>
