'feature/dashboard-cards'

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -19,7 +19,7 @@
 <div class="flex-wrap md:flex">
     {{!-- Sidebar Content --}}
     <div class="my-0 md:w-1/4 md:h-screen w-screen bg-white">
-        <button type="button" id="myBtn"
+        <button type="button" id="myBtn"1
             class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
             add item
         </button>
