--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -11,7 +11,10 @@
             {{#if expiration_date}}
             <p class="text-sm text-indigo-600">Expires: {{format_date expiration_date}}</p>
             {{/if}}
-            <button class="bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm">Delete <i class="ml-2 fas fa-trash-alt"></i></button>
+            <button type="button" class="delete-item-btn bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm"> Delete <i class="ml-2 fas fa-trash-alt"></i></button>
         </div>
     </div>
 </div>
+
+
+<script src="/javascript/delete-item.js"></script>
