--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -1,4 +1,4 @@
-<div class="flex-1 text-center bg-gray-400 px-5 py-5 m-2 rounded">
+<div class="flex-1 text-center bg-gray-400 px-5 py-5 m-2 rounded" id="item-id" data-id="{{id}}">
     <div class="items-center">
         <div class="m-4">
             <h2 class="text-md text-indigo-600 font-bold uppercase">{{item_name}}</h2>
