--- a/welcome-email.ejs
+++ b/welcome-email.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
-    <h1>Hello, User!</h1>
+    <h1>Hello, <%= username %>!</h1>
     <p>Thank you for creating an account. We will use this email address to send you notifications
         about your fridge contents. You will receive an email to notify you that your food is
         expiring soon (within 3 days) and when your food has expired. This way, you are always 
