--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -1,4 +1,4 @@
-<div class="flex-1 text-center bg-gray-400 px-5 py-5 m-2 rounded" id="item-id" data-id="{{id}}">
+<div class="flex-1 text-center bg-gray-400 px-5 py-5 m-2 rounded">
     <div class="items-center">
         <div class="m-4">
             <h2 class="text-md text-indigo-600 font-bold uppercase">{{item_name}}</h2>
@@ -11,7 +11,7 @@
             {{#if expiration_date}}
             <p class="text-sm text-indigo-600">Expires: {{format_date expiration_date}}</p>
             {{/if}}
-            <button class="bg-red-400 hover:bg-red-800 font-bold py-2 px-4 rounded">Delete <i class="ml-2 fas fa-trash-alt"></i></button>
+            <button class="bg-red-400 hover:bg-red-800 font-bold py-2 px-4 rounded" id="delete-btn" data-id="{{id}}">Delete <i class="ml-2 fas fa-trash-alt"></i></button>
         </div>
     </div>
 </div>
