small tweaks to md: on login/signup

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 {{!-- Nav --}}
-<nav class="flex items-center justify-between flex-wrap bg-blue-100 p-6">
+<nav class="flex items-center justify-between flex-wrap bg-blue-light p-6">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
         <span class="text-3xl">
             <h1 class="pacifico text-dark-blue">Fridge Friend</h1>
@@ -8,7 +8,7 @@
     <div class="w-full block justify-end flex-grow sm:flex sm:items-center sm:w-auto">
         <div>
             <a id="logout"
-                class="inline-flex text-sm px-4 py-2 leading-none pacifico
+                class="inline-flex text-sm px-4 py-2 leading-none pacifico cursor-pointer
                 border rounded text-dark-blue border-white pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
                logout
             </a>
@@ -20,7 +20,7 @@
     {{!-- Sidebar Content --}}
     <div class="my-0 md:w-1/4 md:h-screen w-screen bg-white">
         <button type="button" id="myBtn"
-            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
             add item
         </button>
 
