--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -59,7 +59,7 @@
       <h1 class="text-5xl text-center">Fridge Friend</h1>
     </div>
     {{!--form for user LOGIN input --}}
-    <form class="login-form p-10 ml-28 space-y-10">
+    <form class="login-form p-10 ml-28 md:ml-0 space-y-10">
       <div>
         <H6 class="pacifico text-sm text-dark-blue pb-3">email</H6>
         <label for="email-login"></label>
