--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -60,8 +60,8 @@
         <div class="title mt-16">
             <h1 class="text-5xl text-center">Fridge Friend</h1>
         </div>
-        {{!--form for user LOGIN input --}}
-        <form class="login-form p-10 ml-28 space-y-10">
+        {{!--form for user SIGNIN input --}}
+        <form class="login-form p-10 ml-28 md:ml-0 space-y-10">
             <div>
                 <H6 class="pacifico text-sm text-dark-blue pb-3">username</H6>
                 <label for="username-signup"></label>
