--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -1,4 +1,4 @@
-<div class="flex-1 text-center bg-white px-5 m-2 border rounded">
+<div class="flex-1 text-center bg-blue-light px-5 m-2 border border-dark-blue rounded-lg">
     <div class="items-center">
         <div class="m-4">
             <h2 class="pacifico capitalize text-lg text-dark-blue ">{{item_name}}</h2>
@@ -9,7 +9,7 @@
                 <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus"><i class="fas fa-plus"></i></button>
             </div>
             <p class="text-sm text-dark-blue">Expires: 02/28/21</p>
-            <button class="bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm">Delete <i class="ml-2 fas fa-trash-alt"></i></button>
+            <button class="border border-dark-blue rounded-lg hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm">Delete <i class="ml-2 fas fa-trash-alt"></i></button>
         </div>
     </div>
 </div>
