--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="flex flex-wrap">
   <div class="w-1/2 h-screen bg-light-blue">
-    {{!-- this is where the icons will go --}}
+    {{!-- this is where the icons grid below:--}}
     <div class="h-80 grid grid-rows-3 grid-flow-col gap-10 justify-center mt-16">
       <div class="py-2">
         <img src="/images/fridge friend icons-01.png" width="100px" height="100px"
