--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,15 +1,53 @@
 {{!-- Nav --}}
 <nav class="flex items-center justify-between flex-wrap bg-blue-light p-6">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <span class="text-3xl">
+        <span class="text-5xl">
             <h1 class="pacifico text-dark-blue">Fridge Friend</h1>
         </span>
+    </div>
+    <div class="grid grid-rows-1 grid-flow-col gap-2 justify-evenly pl-10">
+      <div class="py-2">
+        <img src="/images/fridge friend icons-01.png" width="80px" height="80px"
+          class="bg-red border-white rounded-full">
+      </div>
+      <div class="py-2">
+        <img src="/images/fridge friend icons-05.png" width="80px" height="80px"
+          class="bg-dark-blue border-white rounded-full">
+      </div>
+      <div class="py-2">
+        <img src="/images/fridge friend icons-06.png" width="80px" height="80px"
+          class="bg-pink border-white rounded-full">
+      </div>
+      <div class="py-2">
+        <img src="/images/fridge friend icons-07.png" width="80px" height="80px"
+          class="bg-blue border-white rounded-full">
+      </div>
+      <div class="py-2">
+        <img src="/images/fridge friend icons-08.png" width="80px" height="80px"
+          class="bg-red border-white rounded-full">
+      </div>
+      <div class="py-2">
+        <img src="/images/fridge friend icons-09.png" width="80px" height="80px"
+          class="bg-dark-blue border-white rounded-full">
+      </div>
+      <div class="py-2">
+        <img src="/images/fridge friend icons-10.png" width="80px" height="80px"
+          class="bg-pink border-white rounded-full">
+      </div>
+      <div class="py-2">
+        <img src="/images/fridge friend icons-04.png" width="80px" height="80px"
+          class="bg-blue border-white rounded-full">
+      </div>
+      <div class="py-2">
+        <img src="/images/fridge friend icons-02.png" width="80px" height="80px"
+          class="bg-red border-white rounded-full">
+      </div>
     </div>
     <div class="w-full block justify-end flex-grow sm:flex sm:items-center sm:w-auto">
         <div>
             <a id="logout"
                 class="inline-flex text-sm px-4 py-2 leading-none pacifico cursor-pointer
-                border rounded text-dark-blue border-white pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
+                border text-dark-blue pacifico font-extralight p-1.5 mt-2 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
                logout
             </a>
         </div>
@@ -49,18 +87,18 @@
         <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
 
             <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-                <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+                <div class="absolute inset-0 bg-gray-200 opacity-75"></div>
             </div>
 
             <!-- This element is to trick the browser into centering the modal contents. -->
             <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
 
-            <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
+            <div class="inline-block align-bottom bg-pink rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
                 role="dialog" aria-modal="true" aria-labelledby="modal-headline">
                 <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                     <div class="sm:flex sm:items-start">
                         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                            <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
+                            <h3 class="text-lg leading-6 font-medium text-dark-blue pacifico" id="modal-headline">
                                 Add an Item
                             </h3>
                             <div class="mt-2">
