--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -1,10 +1,10 @@
-<div class="flex-1 text-center bg-blue-light px-5 m-2 border border-dark-blue rounded-lg">
+<div class="flex-1 text-center bg-blue-light px-5 m-2 rounded-lg">
     <div class="items-center">
         <div class="m-4">
-            <h2 class="pacifico capitalize text-lg text-dark-blue ">{{item_name}}</h2>
+            <h2 class="pacifico capitalize text-lg text-dark-blue">{{item_name}}</h2>
             <div class="number-input">
                 <p class="text-sm text-dark-blue">Quantity: </p>
-                <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()" ><i class="fas fa-minus"></i></button>
+                <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"><i class="fas fa-minus"></i></button>
                 <input class="quantity" min="1" name="quantity" value="{{quantity}}" type="number" />
                 <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus"><i class="fas fa-plus"></i></button>
             </div>
