exp date function outlined

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -111,3 +111,4 @@
 
 <script src="/javascript/delete.js"></script>
 <script src="/javascript/update-qty.js"></script>
+<script src="/javascript/exp-date.js"></script>
