--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -58,10 +58,10 @@
     <div class="w-1/2 h-screen flex-wrap">
 
         <div class="title mt-16">
-            <h1 class="text-5xl text-center">Fridge Friend</h1>
+            <h1 class="text-5xl text-center text-dark-blue">Fridge Friend</h1>
         </div>
         {{!--form for user SIGNIN input --}}
-        <form class="login-form p-10 ml-28 md:ml-0 space-y-10">
+        <form class="login-form p-10 ml-28 space-y-10">
             <div>
                 <H6 class="pacifico text-sm text-dark-blue pb-3">username</H6>
                 <label for="username-signup"></label>
@@ -78,7 +78,7 @@
                     type="email" id="email-signup" />
             </div>
             <div>
-                <H6 class="pacifico font-extralight text-sm text-dark-blue pb-3">password</H6>
+                <H6 class="pacifico text-sm text-dark-blue pb-3">password</H6>
                 <label for="password-signup"></label>
                 <input
                     class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-96"
@@ -86,7 +86,7 @@
             </div>
             <div>
                 <button
-                    class="pacifico font-extralight text-dark-blue bg-light-blue text-sm p-1.5 mt-2 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg"
+                    class="pacifico text-blue-light bg-dark-blue text-sm p-1.5 mt-2 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg"
                     type="submit">sign in</button>
             </div>
         </form>
