--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,49 +6,49 @@
         </span>
     </div>
     <div class="grid grid-rows-1 grid-flow-col gap-2 justify-evenly pl-10">
-      <div class="py-2">
-        <img src="/images/fridge friend icons-01.png" width="80px" height="80px"
-          class="bg-red border-white rounded-full">
-      </div>
-      <div class="py-2">
-        <img src="/images/fridge friend icons-05.png" width="80px" height="80px"
-          class="bg-dark-blue border-white rounded-full">
-      </div>
-      <div class="py-2">
-        <img src="/images/fridge friend icons-06.png" width="80px" height="80px"
-          class="bg-pink border-white rounded-full">
-      </div>
-      <div class="py-2">
-        <img src="/images/fridge friend icons-07.png" width="80px" height="80px"
-          class="bg-blue border-white rounded-full">
-      </div>
-      <div class="py-2">
-        <img src="/images/fridge friend icons-08.png" width="80px" height="80px"
-          class="bg-red border-white rounded-full">
-      </div>
-      <div class="py-2">
-        <img src="/images/fridge friend icons-09.png" width="80px" height="80px"
-          class="bg-dark-blue border-white rounded-full">
-      </div>
-      <div class="py-2">
-        <img src="/images/fridge friend icons-10.png" width="80px" height="80px"
-          class="bg-pink border-white rounded-full">
-      </div>
-      <div class="py-2">
-        <img src="/images/fridge friend icons-04.png" width="80px" height="80px"
-          class="bg-blue border-white rounded-full">
-      </div>
-      <div class="py-2">
-        <img src="/images/fridge friend icons-02.png" width="80px" height="80px"
-          class="bg-red border-white rounded-full">
-      </div>
+        <div class="py-2">
+            <img src="/images/fridge friend icons-01.png" width="80px" height="80px"
+                class="bg-red border-white rounded-full">
+        </div>
+        <div class="py-2">
+            <img src="/images/fridge friend icons-05.png" width="80px" height="80px"
+                class="bg-dark-blue border-white rounded-full">
+        </div>
+        <div class="py-2">
+            <img src="/images/fridge friend icons-06.png" width="80px" height="80px"
+                class="bg-pink border-white rounded-full">
+        </div>
+        <div class="py-2">
+            <img src="/images/fridge friend icons-07.png" width="80px" height="80px"
+                class="bg-blue border-white rounded-full">
+        </div>
+        <div class="py-2">
+            <img src="/images/fridge friend icons-08.png" width="80px" height="80px"
+                class="bg-red border-white rounded-full">
+        </div>
+        <div class="py-2">
+            <img src="/images/fridge friend icons-09.png" width="80px" height="80px"
+                class="bg-dark-blue border-white rounded-full">
+        </div>
+        <div class="py-2">
+            <img src="/images/fridge friend icons-10.png" width="80px" height="80px"
+                class="bg-pink border-white rounded-full">
+        </div>
+        <div class="py-2">
+            <img src="/images/fridge friend icons-04.png" width="80px" height="80px"
+                class="bg-blue border-white rounded-full">
+        </div>
+        <div class="py-2">
+            <img src="/images/fridge friend icons-02.png" width="80px" height="80px"
+                class="bg-red border-white rounded-full">
+        </div>
     </div>
     <div class="w-full block justify-end flex-grow sm:flex sm:items-center sm:w-auto">
         <div>
             <a id="logout"
                 class="inline-flex text-sm px-4 py-2 leading-none pacifico cursor-pointer
-                border text-dark-blue pacifico font-extralight p-1.5 mt-2 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
-               logout
+               text-dark-blue pacifico p-1.5 mt-2 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
+                logout
             </a>
         </div>
     </div>
@@ -58,7 +58,7 @@
     {{!-- Sidebar Content --}}
     <div class="my-0 md:w-1/4 md:h-screen w-screen bg-white">
         <button type="button" id="myBtn"
-            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico text-dark-blue text-sm p-1.5 mt-2 bg-blue-light hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg">
             add item
         </button>
 
@@ -69,7 +69,8 @@
     <div class="md:w-3/4 md:h-screen w-screen bg-white">
         {{!-- Welcome Message Container --}}
         <div class="container md:mt-5 mx-auto px-4">
-            <h2 class=" pacifico capitalize text-xl text-dark-blue">hello, {{username}} !here's what's in your fridge</h2>
+            <h2 class=" pacifico capitalize text-xl text-dark-blue">hello, {{username}} !here's what's in your fridge
+            </h2>
         </div>
         {{!-- Card Container for Inventory --}}
         <div class="container mt-5 mx-auto px-2">
@@ -87,7 +88,7 @@
         <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
 
             <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-                <div class="absolute inset-0 bg-gray-200 opacity-75"></div>
+                <div class="absolute inset-0 bg-blue opacity-75"></div>
             </div>
 
             <!-- This element is to trick the browser into centering the modal contents. -->
@@ -95,26 +96,26 @@
 
             <div class="inline-block align-bottom bg-pink rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
                 role="dialog" aria-modal="true" aria-labelledby="modal-headline">
-                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                <div class="bg-pink px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                     <div class="sm:flex sm:items-start">
                         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                            <h3 class="text-lg leading-6 font-medium text-dark-blue pacifico" id="modal-headline">
+                            <h3 class="text-xl leading-6 text-dark-blue pacifico" id="modal-headline">
                                 Add an Item
                             </h3>
                             <div class="mt-2">
                                 {{!--Form--}}
-                                <form class="add-item-form">
+                                <form class="add-item-form space-y-2">
                                     <div>
-                                        <label for="food-item">Item:</label>
-                                        <input type="text" id="food-item" />
+                                        <label for="food-item " class="text-dark-blue pacifico rounded-lg">Item:</label>
+                                        <input type="text" id="food-item" class="rounded-lg bg-blue-light"/>
                                     </div>
                                     <div>
-                                        <label for="qty">Qty:</label>
-                                        <input type="text" id="email-signup" />
+                                        <label for="qty" class="text-dark-blue pacifico">Qty:</label>
+                                        <input type="text" id="email-signup" class="rounded-lg bg-blue-light" />
                                     </div>
                                     <div>
-                                        <label for="category">Choose a category</label>
-                                        <select id="categories" name="categories">
+                                        <label for="category" class="text-dark-blue pacifico">Choose a category:</label>
+                                        <select id="categories" name="categories" class="text-dark-blue pacifico rounded-lg bg-blue-light">
                                             <option value="fruit">Fruit</option>
                                             <option value="veggies">Veggies</option>
                                             <option value="meat_seafood">Meat and Seafood</option>
@@ -125,8 +126,8 @@
                                         </select>
                                     </div>
                                     <div>
-                                        <label for="expiration">Expiration Date</label>
-                                        <input type="text" id="expiration" />
+                                        <label for="expiration" class="text-dark-blue pacifico">Expiration Date:</label>
+                                        <input type="text" id="expiration" class="rounded-lg bg-blue-light" />
                                     </div>
                                 </form>
 
@@ -135,11 +136,11 @@
                     </div>
                 </div>
                 <button type="button" id="addItem"
-                    class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                    class="my-3 w-full inline-flex justify-center rounded-lg shadow-sm px-4 py-2 text-dark-blue bg-blue-light pacifico text-base hover:bg-blue focus:outline-none focus:ring-2 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
                     Submit
                 </button>
                 <button type="button" id="close"
-                    class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
+                    class="my-3 w-full inline-flex justify-center rounded-lg shadow-sm px-4 py-2 text-dark-blue bg-blue-light pacifico text-base text-gray-700 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
                     Cancel
                 </button>
             </div>
