--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="flex flex-wrap">
-  <div class="w-1/2 h-screen bg-light-blue">
+  <div class="w-1/2 h-screen bg-blue-light">
     {{!-- this is where the icons grid below:--}}
     <div class="h-80 grid grid-rows-3 grid-flow-col gap-10 justify-center mt-16">
       <div class="py-2">
@@ -56,10 +56,10 @@
   <div class="w-1/2 h-screen flex-wrap">
 
     <div class="title mt-16">
-      <h1 class="text-5xl text-center">Fridge Friend</h1>
+      <h1 class="text-5xl text-center text-dark-blue">Fridge Friend</h1>
     </div>
     {{!--form for user LOGIN input --}}
-    <form class="login-form p-10 ml-28 md:ml-0 space-y-10">
+    <form class="login-form p-10 ml-28 space-y-10">
       <div>
         <H6 class="pacifico text-sm text-dark-blue pb-3">email</H6>
         <label for="email-login"></label>
@@ -68,7 +68,7 @@
           type="text" id="email-login" />
       </div>
       <div>
-        <H6 class="pacifico font-extralight text-sm text-dark-blue pb-3">password</H6>
+        <H6 class="pacifico text-sm text-dark-blue pb-3">password</H6>
         <label for="password-login"></label>
         <input
           class="shadow-sm border-b-2 border-blue rounded-sm focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg w-96"
@@ -76,7 +76,7 @@
       </div>
       <div>
         <button
-          class="pacifico font-extralight text-dark-blue bg-light-blue text-sm p-1.5 mt-2 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg"
+          class="pacifico text-dark-blue bg-blue-light text-sm p-1.5 mt-2 hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg"
           type="submit">login</button>
       </div>
     </form>
