--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -88,7 +88,7 @@
         <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
 
             <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-                <div class="absolute inset-0 bg-blue opacity-75"></div>
+                <div class="absolute inset-0 bg-dark-blue opacity-50"></div>
             </div>
 
             <!-- This element is to trick the browser into centering the modal contents. -->
