--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -61,7 +61,7 @@
             <h1 class="text-5xl text-center text-dark-blue">Fridge Friend</h1>
         </div>
         {{!--form for user SIGNIN input --}}
-        <form class="login-form p-10 ml-28 space-y-10">
+        <form class="signup-form p-10 ml-28 space-y-10">
             <div>
                 <H6 class="pacifico text-sm text-dark-blue pb-3">username</H6>
                 <label for="username-signup"></label>
