--- a/public/stylesheets/production_style.css
+++ b/public/stylesheets/production_style.css
@@ -17624,38 +17624,6 @@ video {
           animation: bounce 1s infinite;
 }
 
-:root {
-  --light-blue: #ddfff7;
-  --blue: #93e1d8;
-  --dark-blue: #577399;
-  --coral: #ffA69e;
-  --dark-red: #aa4465;
-}
-
-.bg-dark-blue {
-  background-color: var(--dark-blue);
-}
-
-.text-dark-blue {
-  color: var(--dark-blue);
-}
-
-.bg-dark-red {
-  background-color: var(--dark-red);
-}
-
-.bg-coral {
-  background-color: var(--coral);
-}
-
-.bg-light-blue {
-  background-color: var(--light-blue);
-}
-
-.bg-blue {
-  background-color: var(--blue);
-}
-
 body {
   font-family: 'Open Sans', sans-serif;
 }
@@ -17851,6 +17819,26 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 /* Quantity Styles End */
+
+/* THIS IS FOR THE ICON ANIMATION
+
+button:hover{
+    animation: wiggle 0.6s;
+}
+
+@keyframes wiggle{
+    25%{
+	transform: scale(0.8,1.3);
+    }
+    50%{
+	transform: scale(1.1,0.8);
+    }
+    75%{
+	transform: scale(0.7,1.2);
+    }
+}
+
+*/
 
 @media (min-width: 640px) {
   .sm\:container {
@@ -102830,4 +102818,4 @@ input[type=number]::-webkit-outer-spin-button {
     -webkit-animation: bounce 1s infinite;
             animation: bounce 1s infinite;
   }
-}
+} 
