--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -9,7 +9,11 @@
                 <button id="add-qty-btn" data-id="{{id}}" onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus"><i class="fas fa-plus"></i></button>
             </div>
             {{#if expiration_date}}
-            <p class="text-sm text-indigo-600">Expires: <span id="exp-date" class="text-white">{{format_date expiration_date}}</span></p>
+            <div class="exp-date-border border rounded border-transparent">
+                <p class="text-sm text-indigo-600">Expires: 
+                    <span class="exp-date">{{format_date expiration_date}}</span>
+                </p>
+            </div>
             {{/if}}
             <button class="bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm" id="delete-btn" data-id="{{id}}">Delete <i class="ml-2 fas fa-trash-alt"></i></button>
         </div>
