--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,40 +3,33 @@
         {{!-- this is where the icons will go --}}
         <div class="h-80 grid grid-rows-3 grid-flow-col gap-10 justify-center mt-16">
             <div class="py-2">
-                <img src="/images/fridge friend icons-01.png" width="100px" height="100px"
-                    class="bg-red rounded-full">
+                <img src="/images/fridge friend icons-01.png" width="100px" height="100px" class="bg-red rounded-full">
             </div>
             <div class="py-2">
                 <img src="/images/fridge friend icons-05.png" width="100px" height="100px"
                     class="bg-dark-blue rounded-full border-blue-light border">
             </div>
             <div class="py-2">
-                <img src="/images/fridge friend icons-06.png" width="100px" height="100px"
-                    class="bg-pink rounded-full">
+                <img src="/images/fridge friend icons-06.png" width="100px" height="100px" class="bg-pink rounded-full">
             </div>
             <div class="py-2">
-                <img src="/images/fridge friend icons-07.png" width="100px" height="100px"
-                    class="bg-blue rounded-full">
+                <img src="/images/fridge friend icons-07.png" width="100px" height="100px" class="bg-blue rounded-full">
             </div>
             <div class="py-2">
-                <img src="/images/fridge friend icons-08.png" width="100px" height="100px"
-                    class="bg-red rounded-full">
+                <img src="/images/fridge friend icons-08.png" width="100px" height="100px" class="bg-red rounded-full">
             </div>
             <div class="py-2">
                 <img src="/images/fridge friend icons-09.png" width="100px" height="100px"
                     class="bg-dark-blue border-blue-light border rounded-full">
             </div>
             <div class="py-2">
-                <img src="/images/fridge friend icons-10.png" width="100px" height="100px"
-                    class="bg-pink rounded-full">
+                <img src="/images/fridge friend icons-10.png" width="100px" height="100px" class="bg-pink rounded-full">
             </div>
             <div class="py-2">
-                <img src="/images/fridge friend icons-04.png" width="100px" height="100px"
-                    class="bg-blue rounded-full">
+                <img src="/images/fridge friend icons-04.png" width="100px" height="100px" class="bg-blue rounded-full">
             </div>
             <div class="py-2">
-                <img src="/images/fridge friend icons-02.png" width="100px" height="100px"
-                    class="bg-red rounded-full">
+                <img src="/images/fridge friend icons-02.png" width="100px" height="100px" class="bg-red rounded-full">
             </div>
         </div>
 
@@ -91,5 +84,10 @@
             </div>
         </form>
 
+        <div class="new-user text-sm p-20 text-dark-blue text-center">
+            Already have an account with us? 
+            <br>
+            Click <a href="/" class="text-pink">here</a> to login!
+        </div>
 
     </div>
