--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -1,6 +1,6 @@
 <div class="flex-1 text-center bg-dark-blue px-5 m-2 rounded-lg">
     <div class="items-center">
-        <div class="m-4">
+        <div class="m-4 space-y-2">
             <h2 class="pacifico capitalize text-lg text-blue-light">{{item_name}}</h2>
             <div class="number-input">
                 <p class="text-sm text-blue-light">Quantity: </p>
