--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -4,9 +4,9 @@
             <h2 class="pacifico capitalize text-lg text-dark-blue ">{{item_name}}</h2>
             <div class="number-input">
                 <p class="text-sm text-indigo-600">Quantity: </p>
-                <button id="subtract-qty-btn" data-id="{{id}}" onclick="this.parentNode.querySelector('input[type=number]').stepDown()" ><i class="fas fa-minus"></i></button>
-                <input class="quantity" id="update-qty-input" data-id="{{id}}" min="1" name="quantity" value="{{quantity}}" type="number" />
-                <button id="add-qty-btn" data-id="{{id}}" onclick="this.parentNode.querySelector('input[type=number]').stepUp()" class="plus"><i class="fas fa-plus"></i></button>
+                <button class="subtract-qty-btn" data-id="{{id}}" onclick="this.parentNode.querySelector('input[type=number]').stepDown()" ><i class="fas fa-minus"></i></button>
+                <input class="quantity update-qty-input" data-id="{{id}}" min="1" name="quantity" value="{{quantity}}" type="number" />
+                <button class="add-qty-btn" data-id="{{id}}" onclick="this.parentNode.querySelector('input[type=number]').stepUp()"><i class="fas fa-plus"></i></button>
             </div>
             {{#if expiration_date}}
             <div class="exp-date-border border rounded border-transparent">
@@ -15,7 +15,7 @@
                 </p>
             </div>
             {{/if}}
-            <button class="bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm" id="delete-btn" data-id="{{id}}">Delete <i class="ml-2 fas fa-trash-alt"></i></button>
+            <button class="bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm delete-btn" data-id="{{id}}">Delete <i class="ml-2 fas fa-trash-alt"></i></button>
         </div>
     </div>
 </div>
