--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -20,19 +20,19 @@
     {{!-- Sidebar Content --}}
     <div class="my-0 md:w-1/4 md:h-screen w-screen bg-white">
         <button type="button" id="myBtn"
-            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg">
             add item
         </button>
-
+    <h6 class="pacifico text-lg text-dark-blue">Filter by Category</h6>
 <button type="button" id="fruit" name="category_name"
-            class="pacifico mt-3 w-full inline-flex justify-center pacifico font-extralight text-dark-blue text-sm p-1.5 mt-2 bg-blue-100 hover:bg-blue-200 focus:outline-none focus:ring-2 focus:ring-blue-100 focus:ring-opacity-50 rounded-lg" value="1">
+            class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg" value="1">
             Fruit
         </button>
 
-            {{#if inventories}}
+            {{!-- {{#if inventories}}
             <h2 class="pacifico capitalize text-4xl text-dark-blue center">Shopping List</h2>
 
-            {{/if}}
+            {{/if}} --}}
 </div>
 
     {{!-- Main Content --}}
