--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -61,26 +61,56 @@
             class="pacifico mt-3 w-full inline-flex justify-center pacifico text-dark-blue text-sm p-1.5 mt-2 bg-blue-light hover:bg-blue focus:outline-none focus:ring-2 focus:ring-blue focus:ring-opacity-50 rounded-lg">
             add item
         </button>
-    <h6 class="pacifico text-lg text-dark-blue">Filter by Category</h6>
-<button type="button" id="fruit" name="category_name"
-            class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg" value="1">
-            Fruit
-        </button>
 
-            {{!-- {{#if inventories}}
-            <h2 class="pacifico capitalize text-4xl text-dark-blue center">Shopping List</h2>
+        <div class="category-buttons">
+            <h6 class="pacifico text-lg text-dark-blue">Filter by Category</h6>
+                <button type="button" id="fruit" name="category_name"
+                    class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
+                    value="1">
+                    Fruit
+                </button>
+                <button type="button" id="veggies" name="category_name"
+                    class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
+                    value="1">
+                    Veggies
+                </button>
+                 <button type="button" id="meat-and-seafood" name="category_name"
+                    class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
+                    value="1">
+                    Meat and Seafood
+                </button>
+                  <button type="button" id="dairy-and-eggs" name="category_name"
+                    class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
+                    value="1">
+                    Dairy and Eggs
+                </button>
+                <button type="button" id="drinks" name="category_name"
+                    class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
+                    value="1">
+                    Drinks
+                </button>
+                 <button type="button" id="miscellaneous" name="category_name"
+                    class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
+                    value="1">
+                    Miscellaneous
+                </button>
+        </div>
+        {{!-- {{#if inventories}}
+        <h2 class="pacifico capitalize text-4xl text-dark-blue center">Shopping List</h2>
 
-            {{/if}} --}}
-</div>
+        {{/if}} --}}
+    </div>
 
     {{!-- Main Content --}}
     <div class="md:w-3/4 md:h-screen w-screen bg-white">
         {{!-- Welcome Message Container --}}
         <div class="container md:mt-5 mx-auto px-4">
             {{#if inventories}}
-            <h2 class="pacifico capitalize text-xl text-dark-blue">hello, {{getUsername inventories}}! here's what's in your fridge!</h2>
+            <h2 class="pacifico capitalize text-xl text-dark-blue">hello, {{getUsername inventories}}! here's what's in
+                your fridge!</h2>
             {{else}}
-            <h2 class="pacifico capitalize text-xl text-dark-blue">hello, new user! Let's add some items to your fridge!</h2>
+            <h2 class="pacifico capitalize text-xl text-dark-blue">hello, new user! Let's add some items to your fridge!
+            </h2>
             {{/if}}
         </div>
         {{!-- Card Container for Inventory --}}
