--- a/views/partials/fridge-info.handlebars
+++ b/views/partials/fridge-info.handlebars
@@ -1,4 +1,4 @@
-<div class="flex-1 text-center bg-white px-5 m-2 border rounded">
+<div class="flex-1 text-center bg-gray-400 px-5 py-5 m-2 rounded" class="item-id" data-id="{{id}}">
     <div class="items-center">
         <div class="m-4">
             <h2 class="pacifico capitalize text-lg text-dark-blue ">{{item_name}}</h2>
@@ -11,7 +11,7 @@
             {{#if expiration_date}}
             <p class="text-sm text-indigo-600">Expires: {{format_date expiration_date}}</p>
             {{/if}}
-            <button type="button" class="delete-item-btn bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm"> Delete <i class="ml-2 fas fa-trash-alt"></i></button>
+            <button type="button" id="delete-item-btn" class="bg-blue-100 hover:bg-blue-200 font-bold py-2 px-4 rounded-lg pacifico text-dark-blue text-sm"> Delete <i class="ml-2 fas fa-trash-alt"></i></button>
         </div>
     </div>
 </div>
