--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -71,27 +71,32 @@
                 </button>
                 <button type="button" id="veggies" name="category_name"
                     class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
-                    value="1">
+                    value="2">
                     Veggies
                 </button>
                  <button type="button" id="meat-and-seafood" name="category_name"
                     class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
-                    value="1">
+                    value="3">
                     Meat and Seafood
                 </button>
                   <button type="button" id="dairy-and-eggs" name="category_name"
                     class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
-                    value="1">
+                    value="4">
                     Dairy and Eggs
                 </button>
                 <button type="button" id="drinks" name="category_name"
                     class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
-                    value="1">
+                    value="5">
                     Drinks
+                </button>
+                 <button type="button" id="condiments" name="category_name"
+                    class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
+                    value="6">
+                    Condiments
                 </button>
                  <button type="button" id="miscellaneous" name="category_name"
                     class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
-                    value="1">
+                    value="7">
                     Miscellaneous
                 </button>
         </div>
