added min date of today to calendar

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -89,7 +89,7 @@
                                     </div>
                                     <div>
                                         <label for="expiration">Expiration Date</label>
-                                        <input type="date" id="expDate" name="expiration_date">
+                                        <input type="date" min="" id="expDate" name="expiration_date">
                                     </div>
                                 </form>
                             </div>
