--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -67,7 +67,7 @@
                 <button type="button" id="fruit" name="category_name"
                     class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
                     value="1">
-                    Fruit
+                    Fruits
                 </button>
                 <button type="button" id="veggies" name="category_name"
                     class="pacifico mt-3 w-full inline-flex justify-center pacifico text-blue-light text-sm p-1.5 mt-2 bg-dark-blue hover:bg-blue focus:outline-none focus:ring-2 focus:ring-opacity-50 rounded-lg"
