--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,7 +41,7 @@
 
     <script src ="/javascript/modal.js"></script>
     <script src="/javascript/login.js"></script>
-    <script src="tailwind.config.js"></script>
+    {{!-- <script src="tailwind.config.js"></script> --}}
 
 
 </body>
