login responsive-done. need to do signin one now.

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -54,7 +54,7 @@
             <h1 class="text-5xl text-center text-dark-blue">Fridge Friend</h1>
         </div>
         {{!--form for user SIGNIN input --}}
-        <form class="signup-form p-10 ml-28 space-y-10 md:ml-0 sm:ml:0">
+        <form class="signup-form p-10 ml-28 space-y-10 md:ml-28">
             <div>
                 <H6 class="pacifico text-sm text-dark-blue pb-3">username</H6>
                 <label for="username-signup"></label>
