--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,6 +43,7 @@
     <script src="/javascript/login.js"></script>
     <script src="/javascript/filter.js"></script>
     <script src="/javascript/logout.js"></script>
+    <script src="/javascript/dragcards.js"></script>
     
 </body>
 
