small tweak to responsive signup/login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -83,7 +83,7 @@
     </form>
 
     {{!-- to be rerouted to the signup page --}}
-    <div class="new-user text-sm lg:p-20 pt-5 text-dark-blue text-center">
+    <div class="new-user text-sm lg:pt-20 pt-5 text-dark-blue text-center">
       Are you new to Fridge Friend?
       <br>
       Click <a href="/signup" class="text-pink">here</a> to sign up!
