--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -84,7 +84,7 @@
             </div>
         </form>
 
-        <div class="new-user text-sm lg:p-20 pt-5 text-dark-blue text-center">
+        <div class="new-user text-sm lg:pt-10 pt-5 text-dark-blue text-center">
             Already have an account with us? 
             <br>
             Click <a href="/" class="text-pink">here</a> to login!
