updated the README outline

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -120,7 +120,7 @@
             <h2 class="pacifico capitalize text-xl text-dark-blue">hello, {{getUsername inventories}}! here's what's in
                 your fridge!</h2>
             {{else}}
-            <h2 class="pacifico capitalize text-xl text-dark-blue">hello, new user! Let's add some items to your fridge!
+            <h2 class="pacifico capitalize text-xl text-dark-blue">hmm, nothing's here. let's add some items to your fridge!
             </h2>
             {{/if}}
         </div>
